--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,10 @@
     "babel-plugin-module-resolver": "4.1.0",
     "body-parser": "1.19.0",
     "dotenv-safe": "8.2.0",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "pg": "^8.6.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@types/express": "4.17.11",
