--- a/api/ormconfig.json
+++ b/api/ormconfig.json
@@ -4,7 +4,7 @@
    "port": 5432,
    "username": "root",
    "password": "root",
-   "database": "students",
+   "database": "database",
    "synchronize": true,
    "logging": false,
    "entities": [
@@ -13,12 +13,8 @@
    "migrations": [
       "./src/database/migrations/**.ts"
    ],
-   "subscribers": [
-      "src/subscriber/**/*.ts"
-   ],
    "cli": {
-      "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
-      "subscribersDir": "src/subscriber"
+      "entitiesDir": "src/models",
+      "migrationsDir": "src/database/migrations"
    }
 }
