Other general adjutments

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     environment:
       POSTGRES_USER: "root"
       POSTGRES_PASSWORD: "root"
-      POSTGRES_DB: "students"
+      POSTGRES_DB: "database"
 
