--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,12 @@
 {
   "scripts": {
-    "start": "NODE_ENV=prod node -r dotenv/config dist/bin/server.js",
+    "start": "yarn typeorm migration:run && NODE_ENV=prod node -r dotenv/config dist/bin/server.js",
     "start-pm2": "NODE_ENV=prod pm2 start dist/bin/server.js",
     "build": "babel src --extensions \".js,.ts,.tsx\" --out-dir dist --copy-files --no-copy-ignored",
-    "dev": "NODE_ENV=dev tsnd -r tsconfig-paths/register -r dotenv/config --respawn --transpile-only --ignore-watch node_modules --no-notify src/bin/server.ts",
+    "dev": "yarn typeorm migration:run && NODE_ENV=dev tsnd -r tsconfig-paths/register -r dotenv/config --respawn --transpile-only --ignore-watch node_modules --no-notify src/bin/server.ts",
     "test": "NODE_ENV=test jest -i --forceExit",
-    "testsh": "bash ./scripts/test.sh"
+    "testsh": "bash ./scripts/test.sh",
+    "typeorm": "tsnd node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@babel/cli": "7.13.14",
@@ -18,13 +19,15 @@
     "dotenv-safe": "8.2.0",
     "express": "4.17.1",
     "pg": "^8.6.0",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.32"
+    "typeorm": "^0.2.32",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "4.17.11",
     "@types/jest": "26.0.22",
     "@types/supertest": "2.0.11",
+    "@types/uuid": "^8.3.0",
+    "reflect-metadata": "^0.1.13",
     "jest": "26.6.3",
     "pm2": "4.5.6",
     "supertest": "6.1.3",
