--- a/api/package.json
+++ b/api/package.json
@@ -18,18 +18,21 @@
     "body-parser": "1.19.0",
     "dotenv-safe": "8.2.0",
     "express": "4.17.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.6.0",
     "typeorm": "^0.2.32",
-    "uuid": "^8.3.2"
+    "typeorm-pagination": "^2.0.1",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/express": "4.17.11",
     "@types/jest": "26.0.22",
     "@types/supertest": "2.0.11",
     "@types/uuid": "^8.3.0",
-    "reflect-metadata": "^0.1.13",
     "jest": "26.6.3",
     "pm2": "4.5.6",
+    "reflect-metadata": "^0.1.13",
     "supertest": "6.1.3",
     "ts-jest": "26.5.5",
     "ts-node-dev": "1.1.6",
