--- a/api/ormconfig.json
+++ b/api/ormconfig.json
@@ -1,4 +1,6 @@
-{
+[
+   {
+   "name": "prod",
    "type": "postgres",
    "host": "localhost",
    "port": 5432,
@@ -17,4 +19,28 @@
       "entitiesDir": "src/models",
       "migrationsDir": "src/database/migrations"
    }
-}
+
+   },
+   {
+   "name": "test",
+   "type": "postgres",
+   "host": "localhost",
+   "port": 5444,
+   "username": "root",
+   "password": "root",
+   "database": "database_test",
+   "synchronize": true,
+   "logging": false,
+   "entities": [
+      "./src/models/**.ts"
+   ],
+   "migrations": [
+      "./src/database/migrations/**.ts"
+   ],
+   "cli": {
+      "entitiesDir": "src/models",
+      "migrationsDir": "src/database/migrations"
+   }
+
+   }
+]
