--- a/api/package.json
+++ b/api/package.json
@@ -1,20 +1,23 @@
 {
   "scripts": {
-    "start": "yarn typeorm migration:run && NODE_ENV=prod node -r dotenv/config dist/bin/server.js",
+    "start": "yarn typeorm migration:run -c prod && NODE_ENV=prod node -r dotenv/config dist/bin/server.js",
     "start-pm2": "NODE_ENV=prod pm2 start dist/bin/server.js",
     "build": "babel src --extensions \".js,.ts,.tsx\" --out-dir dist --copy-files --no-copy-ignored",
-    "dev": "yarn typeorm migration:run && NODE_ENV=dev tsnd -r tsconfig-paths/register -r dotenv/config --respawn --transpile-only --ignore-watch node_modules --no-notify src/bin/server.ts",
-    "test": "NODE_ENV=test jest -i --forceExit",
+    "dev": "yarn typeorm migration:run -c prod && NODE_ENV=prod tsnd -r tsconfig-paths/register -r dotenv/config --respawn --transpile-only --ignore-watch node_modules --no-notify src/bin/server.ts",
+    "test": "yarn typeorm migration:run -c test && NODE_ENV=test jest -i --forceExit",
     "testsh": "bash ./scripts/test.sh",
     "typeorm": "tsnd node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@babel/cli": "7.13.14",
     "@babel/core": "7.13.15",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.15",
     "@babel/preset-env": "7.13.15",
     "@babel/preset-typescript": "7.13.0",
     "@types/node": "14.14.41",
     "babel-plugin-module-resolver": "4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "body-parser": "1.19.0",
     "dotenv-safe": "8.2.0",
     "express": "4.17.1",
