--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -12,7 +12,7 @@
     "emitDeclarationOnly": true,
     "removeComments": true,
     "isolatedModules": true,
-    "strict": true,
+    "strict": false,
     "typeRoots": [
       "./node_modules/@types",
       "./src/@types"
