--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
-    "start": "yarn typeorm migration:run -c prod && NODE_ENV=prod node -r dotenv/config dist/bin/server.js",
-    "start-pm2": "NODE_ENV=prod pm2 start dist/bin/server.js",
+    "start:prod": "yarn build && yarn typeorm migration:run -c prod && NODE_ENV=prod node -r dotenv/config dist/bin/server.js",
+    "start:pm2": "NODE_ENV=dev pm2 start dist/bin/server.js",
+    "start:dev": "yarn typeorm migration:run -c dev && NODE_ENV=dev tsnd -r tsconfig-paths/register -r dotenv/config --respawn --transpile-only --ignore-watch node_modules --no-notify src/bin/server.ts",
+    "start:db": "docker-compose -f docker-compose-test.yml up",
+    "dev": "docker-compose up",
     "build": "babel src --extensions \".js,.ts,.tsx\" --out-dir dist --copy-files --no-copy-ignored",
-    "dev": "yarn typeorm migration:run -c prod && NODE_ENV=prod tsnd -r tsconfig-paths/register -r dotenv/config --respawn --transpile-only --ignore-watch node_modules --no-notify src/bin/server.ts",
-    "test": "yarn typeorm migration:run -c test && NODE_ENV=test jest -i --forceExit",
+    "test": "NODE_ENV=test PORT=3333 jest -i --forceExit",
     "testsh": "bash ./scripts/test.sh",
     "typeorm": "tsnd node_modules/typeorm/cli.js"
   },
