--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "body-parser": "1.19.0",
+    "cors": "^2.8.5",
     "dotenv-safe": "8.2.0",
     "express": "4.17.1",
     "express-async-errors": "^3.1.1",
