Adjustments in the initialization of projects

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,14 @@
 			"options": {
                 "cwd": "${workspaceRoot}/api"
             },
+		},
+		{
+			"label": "db",
+			"script": "start:db",
+			"type": "npm",
+			"options": {
+                "cwd": "${workspaceRoot}/api"
+            },
 		}
 	]
 }
