--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "npm install && vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
